# kendryte-openmv

./: CMakeLists.txt  LICENSE  README.TXT  README.md  brun.sh  brun_auto.sh  gdb.sh  make.sh
cmake/: compile-flags.cmake  executable.cmake
lds/: kendryte.ld
lib/bsp/: crt.S
lib/bsp/include/: dump.h
lib/drivers/: dmac.c  dvp.c
lib/drivers/include/: dmac.h  dvp.h  timer.h
src/openmv/main/: main.c
src/openmv/src/: log.txt
src/openmv/src/micropython/extmod/: modutimeq.c  vfs.c  vfs_fat_file.c
src/openmv/src/micropython/lib/oofatfs/: ff.c  ff.h
src/openmv/src/micropython/lib/utils/: pyexec.c
src/openmv/src/micropython/mpy-cross/: mpconfigport.h
src/openmv/src/micropython/ports/k210-standalone/: Makefile  Makefile_back  file_io.c  help.c  main.c  mpconfigport.h
src/openmv/src/micropython/ports/k210-standalone/board-drivers/: face_detect.c  lcd.c  led.c  nt35310.c  ov2640.c  ov5640.c  systick.c  uart_core.c  ws2812b.c
src/openmv/src/micropython/ports/k210-standalone/board-drivers/include/: led.h  nt35310.h  ov5640.h  ov5640cfg.h  systick.h  ws2812b.h
src/openmv/src/micropython/ports/k210-standalone/buildin-py/: boot.py
src/openmv/src/micropython/py/: asmarm.c  asmthumb.c  asmthumb.h  asmx64.c  asmx64.h  asmx86.c  asmx86.h  emitinlinethumb.c  emitinlinextensa.c  gc.c  mkrules.mk  nlr.c
src/openmv/src/micropython/tests/cmdline/: repl_autocomplete.py.exp  repl_emacs_keys.py.exp
src/openmv/src/omv/: array.h  cambus.c  fb_alloc.c  fb_alloc.h  ff_wrapper.c  framebuffer.c  framebuffer.h  ini.c  main.c  mk  mutex.c  mutex.h  ov9650.c  ringbuf.h  sensor.c  sensor.h  trace.c  umm_malloc.c  usbdbg.h  wifidbg.h
src/openmv/src/omv/boards/OPENMV3/: omv_boardconfig.h
src/openmv/src/omv/img/: agast.c  apriltag.c  blob.c  bmp.c  collections.c  dmtx.c  draw.c  edge.c  fft.c  fmath.c  haar.c  hog.c  imlib.c  imlib.h  integral.c  jpeg.c  kmeans.c  lsd.c  mathop.c  orb.c  phasecorrelation.c  qrcode.c
src/openmv/src/omv/py/: mp.h  py_gif.c  py_image.c  py_image.h  py_nn.c  py_omv.c  py_sensor.c
(+14 files in other folders)
